# gadgetron

./: .gitignore  .gitmodules  CMakeLists.txt
apps/clients/gadgetron_ismrmrd_client/: gadgetron_ismrmrd_client.cpp
apps/gadgetron/: CMakeLists.txt  Connection.cpp  Connection.h  GadgetStreamController.cpp  Server.cpp  Server.h  gadgetron_system_info.h  main.cpp
apps/gadgetron/connection/: ConfigConnection.cpp  Core.h  GadgetronDeserializers.hpp  GadgetronSerializers.hpp  converting_stream_from_socket.hpp
apps/gadgetron/test/: CMakeLists.txt  serialize_deserialize_test.cpp
cmake/: CMakeLists.txt  FindCBLAS.cmake  FindPython3.cmake
core/: CMakeLists.txt  Gadget.cpp  Gadget.h  GadgetronSlotContainer.h  LegacyACE.cpp  LegacyACE.h  Node.h  Storage.cpp
core/io/: primitives.hpp
gadgets/: CMakeLists.txt
gadgets/dicom/: CMakeLists.txt  DicomFinishGadget.h  DicomImageWriter.cpp  dicom_ismrmrd_utility.h
gadgets/mri_core/: CMakeLists.txt  CompressedFloatBuffer.cpp  ExtractGadget.cpp  GadgetIsmrmrdReadWrite.h  NHLBICompression.h  PhysioInterpolationGadget.cpp
gadgets/mri_core/generic_recon_gadgets/: GenericImageReconGadget.cpp
gadgets/python/: CMakeLists.txt
test/: CMakeLists.txt  hoNDArray_utils_test.cpp  hoNFFT_test.cpp  nhlbi_compression_tests.cpp
toolboxes/: CMakeLists.txt
toolboxes/core/: NDArray_utils.h  complext.h
toolboxes/fatwater/: ImageGraph.h
toolboxes/fft/cpu/: hoNDFFT.cpp
toolboxes/gadgettools/: GadgetronConnector.h
toolboxes/mri_core/: CMakeLists.txt
toolboxes/node_discovery/: node_discovery.cpp
toolboxes/python/: CMakeLists.txt
(+9 files in other folders)
